lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__file.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"fn some_func(){}\", |p| p.file())"
---
FILE: 0..16 
  FN_ITEM: 0..16 
    FN_KW: 0..2 "fn"
    WHITESPACE: 2..3 
    NAME: 3..12 
      IDENT: 3..12 "some_func"
    PARAM_LIST: 12..14 
      L_PAREN: 12..13 "("
      R_PAREN: 13..14 ")"
    BLOCK_EXPR: 14..16 
      L_BRACE: 14..15 "{"
      R_BRACE: 15..16 "}"
