lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__fn_item-3.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"fn identity<T>() -> T { }\", |p| p.fn_item())"
---
FN_ITEM: 0..25 
  FN_KW: 0..2 "fn"
  WHITESPACE: 2..3 
  NAME: 3..11 
    IDENT: 3..11 "identity"
  GENERICS: 11..14 
    LT: 11..12 "<"
    TYPE_PARAM: 12..13 
      NAME: 12..13 
        IDENT: 12..13 "T"
    GT: 13..14 ">"
  PARAM_LIST: 14..16 
    L_PAREN: 14..15 "("
    R_PAREN: 15..16 ")"
  WHITESPACE: 16..17 
  RETURN_TYPE: 17..21 
    ARROW: 17..19 "->"
    WHITESPACE: 19..20 
    PATH_TYPE: 20..21 
      PATH: 20..21 
        PATH_SEGMENT: 20..21 
          IDENT: 20..21 "T"
  WHITESPACE: 21..22 
  BLOCK_EXPR: 22..25 
    L_BRACE: 22..23 "{"
    WHITESPACE: 23..24 
    R_BRACE: 24..25 "}"
