lopa-core/src/parsing/snapshots/lopa_core__parsing__parser__test__impl_item-2.snap
---
source: lopa-core/src/parsing/parser.rs
expression: "parse(\"impl Vec2 {\n                fn length();\n                fn unit(self) -> Self; \n            }\",\n|p| p.impl_item())"
---
IMPL_ITEM: 0..94 
  IMPL_KW: 0..4 "impl"
  WHITESPACE: 4..5 
  PATH_TYPE: 5..9 
    PATH: 5..9 
      IDENT: 5..9 "Vec2"
  WHITESPACE: 9..10 
  L_BRACE: 10..11 "{"
  WHITESPACE: 11..28 
  FN_ITEM: 28..40 
    FN_KW: 28..30 "fn"
    WHITESPACE: 30..31 
    NAME: 31..37 
      IDENT: 31..37 "length"
    PARAM_LIST: 37..39 
      L_PAREN: 37..38 "("
      R_PAREN: 38..39 ")"
    SEMI: 39..40 ";"
  WHITESPACE: 40..57 
  FN_ITEM: 57..79 
    FN_KW: 57..59 "fn"
    WHITESPACE: 59..60 
    NAME: 60..64 
      IDENT: 60..64 "unit"
    PARAM_LIST: 64..70 
      L_PAREN: 64..65 "("
      PARAM: 65..69 
        SELF_KW: 65..69 "self"
      R_PAREN: 69..70 ")"
    WHITESPACE: 70..71 
    RETURN_TYPE: 71..78 
      ARROW: 71..73 "->"
      WHITESPACE: 73..74 
      SELF_TYPE: 74..78 
        SELF_TYPE_KW: 74..78 "Self"
    SEMI: 78..79 ";"
  WHITESPACE: 79..93 
  R_BRACE: 93..94 "}"
